kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-violin-service
spec:
  type: ClusterIP
  selector:
    app: go-violin
  ports:
  - protocol: 'TCP'
    port: 3000
    targetPort: 3000
