kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-violin-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: go-violin.mariamfahmy.rocks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-violin-service
            port:
              number: 3000
